Fix: 로컬 환경에서 테스트 위한 코드 수정
- SecurityConfig.java
- corsConfigurationSource() 메서드 활성화