@@ -16,6 +16,9 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.security.web.context.DelegatingSecurityContextRepository;
 import org.springframework.security.web.context.HttpSessionSecurityContextRepository;
 import org.springframework.security.web.context.RequestAttributeSecurityContextRepository;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import sumcoda.webide.member.auth.CustomAccessDeniedHandler;
 import sumcoda.webide.member.auth.CustomAuthenticationEntryPoint;
 import sumcoda.webide.member.auth.general.CustomAuthenticationFailureHandler;
@@ -25,6 +28,9 @@ import sumcoda.webide.member.auth.general.CustomLogoutSuccessHandler;
 import sumcoda.webide.member.auth.social.CustomOAuth2UserService;
 import sumcoda.webide.member.auth.social.OAuth2AuthenticationFailureHandler;
 import sumcoda.webide.member.auth.social.OAuth2AuthenticationSuccessHandler;
+
+import java.util.Arrays;
+import java.util.List;
 
 
 @Configuration
@@ -59,19 +65,19 @@ public class SecurityConfig {
     }
 
 
-//    @Bean
-//    public CorsConfigurationSource corsConfigurationSource() {
-//        CorsConfiguration configuration = new CorsConfiguration();
-//        configuration.setAllowedOrigins(List.of("http://localhost:3000", "https://3ever.vercel.app"));
-//        configuration.setAllowedMethods(Arrays.asList("HEAD", "GET", "POST", "PUT", "DELETE", "OPTIONS"));
-//        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Authorization_Refresh", "Refresh-Token", "Cache-Control", "Content-Type"));
-//        configuration.addAllowedHeader("Access-Control-Allow-Origin");
-//        configuration.setExposedHeaders(Arrays.asList("Authorization", "Authorization_Refresh"));
-//        configuration.setAllowCredentials(true);
-//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//        source.registerCorsConfiguration("/**", configuration);
-//        return source;
-//    }
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(List.of("http://localhost:3000", "https://3ever.vercel.app"));
+        configuration.setAllowedMethods(Arrays.asList("HEAD", "GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Authorization_Refresh", "Refresh-Token", "Cache-Control", "Content-Type"));
+        configuration.addAllowedHeader("Access-Control-Allow-Origin");
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Authorization_Refresh"));
+        configuration.setAllowCredentials(true);
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
+        return source;
+    }
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception{
@@ -81,7 +87,7 @@ public class SecurityConfig {
                 .csrf(AbstractHttpConfigurer::disable)
                 .formLogin(AbstractHttpConfigurer::disable)
                 .httpBasic(AbstractHttpConfigurer::disable)
-//                .cors((corsCustomizer -> corsCustomizer.configurationSource(corsConfigurationSource())))
+                .cors((corsCustomizer -> corsCustomizer.configurationSource(corsConfigurationSource())))
                 // 보안 컨텍스트의 저장 방식을 제어하는 설정
                 // 보안 컨텍스트가 명시적으로 저장될 때만 저장되도록 한다.
                 // 보안 컨텍스트가 실수로 변경되거나 저장되는 것을 방지하여 보안성을 높인다.
